@@ -277,9 +277,4 @@ public class State implements Comparable<State> {
   public int compareTo(State s) {
     return s.id - id;
   }
-
-  @Override
-  public int hashCode() {
-    return id;
-  }  
 }
